--- a/magic-common/common-core/pom.xml
+++ b/magic-common/common-core/pom.xml
@@ -3,21 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>magic-cube</artifactId>
+        <artifactId>magic-common</artifactId>
         <groupId>com.magic.cube</groupId>
         <version>1.0.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>magic-common</artifactId>
-    <packaging>pom</packaging>
-
-    <modules>
-        <module>common-web</module>
-        <module>common-file</module>
-        <module>common-job</module>
-        <module>common-core</module>
-    </modules>
+    <artifactId>common-core</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -26,9 +18,16 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.magic.cube</groupId>
-            <artifactId>common-core</artifactId>
-            <version>1.0.0</version>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>easyexcel</artifactId>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
+
 </project>
