--- a/magic-business/pom.xml
+++ b/magic-business/pom.xml
@@ -5,7 +5,8 @@
     <parent>
         <artifactId>magic-cube</artifactId>
         <groupId>com.magic.cube</groupId>
-        <version>1.0.0</version>
+        <version>${project.version}</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -25,7 +26,7 @@
         <dependency>
             <groupId>com.magic.cube</groupId>
             <artifactId>common-web</artifactId>
-            <version>1.0.0</version>
+            <version>1.2.26</version>
         </dependency>
     </dependencies>
 
