--- a/magic-common/pom.xml
+++ b/magic-common/pom.xml
@@ -5,7 +5,8 @@
     <parent>
         <artifactId>magic-cube</artifactId>
         <groupId>com.magic.cube</groupId>
-        <version>1.0.0</version>
+        <version>${project.version}</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -17,18 +18,11 @@
         <module>common-file</module>
         <module>common-job</module>
         <module>common-core</module>
+        <module>common-cache</module>
     </modules>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
-
-    <dependencies>
-        <dependency>
-            <groupId>com.magic.cube</groupId>
-            <artifactId>common-core</artifactId>
-            <version>1.0.0</version>
-        </dependency>
-    </dependencies>
 </project>
