--- a/magic-platform/pom.xml
+++ b/magic-platform/pom.xml
@@ -5,7 +5,8 @@
     <parent>
         <artifactId>magic-cube</artifactId>
         <groupId>com.magic.cube</groupId>
-        <version>1.0.0</version>
+        <version>${project.version}</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
