--- a/magic-common/common-file/pom.xml
+++ b/magic-common/common-file/pom.xml
@@ -5,8 +5,7 @@
     <parent>
         <artifactId>magic-common</artifactId>
         <groupId>com.magic.cube</groupId>
-        <version>${project.version}</version>
-        <relativePath>../pom.xml</relativePath>
+        <version>1.0.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -15,27 +14,17 @@
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
-
-        <minio.version>8.2.1</minio.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>com.magic.cube</groupId>
             <artifactId>common-web</artifactId>
-            <version>${project.version}</version>
         </dependency>
 
         <dependency>
             <groupId>io.minio</groupId>
             <artifactId>minio</artifactId>
-            <version>${minio.version}</version>
-            <exclusions>
-                <exclusion>
-                    <artifactId>guava</artifactId>
-                    <groupId>com.google.guava</groupId>
-                </exclusion>
-            </exclusions>
         </dependency>
     </dependencies>
 
