--- a/magic-common/common-job/pom.xml
+++ b/magic-common/common-job/pom.xml
@@ -5,8 +5,7 @@
     <parent>
         <artifactId>magic-common</artifactId>
         <groupId>com.magic.cube</groupId>
-        <version>${project.version}</version>
-        <relativePath>../pom.xml</relativePath>
+        <version>1.0.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -16,5 +15,12 @@
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>com.xuxueli</groupId>
+            <artifactId>xxl-job-core</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
