--- a/magic-common/pom.xml
+++ b/magic-common/pom.xml
@@ -5,8 +5,7 @@
     <parent>
         <artifactId>magic-cube</artifactId>
         <groupId>com.magic.cube</groupId>
-        <version>${project.version}</version>
-        <relativePath>../pom.xml</relativePath>
+        <version>1.0.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
